# synaptic-web

./: Cargo.toml  README.md  index.html
assets/: manifest.json  sw.js
src/: main.rs
